# cg-coursework

./: CMakeLists.txt  README.md  init.cpp  init.h  main.cpp  run.sh
assignment1/: main.cpp
assignment2/: partA.cpp  partB.cpp  partC1.cpp  partC2.cpp  partC3.cpp
assignment3/: partA.cpp  partB.cpp
